kannada-geetha/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: kannada-geetha
spec:
  selector:
    matchLabels:
      resource: deployment
  template:
    metadata:
      labels:
        resource: deployment
    spec:
      containers:
      - image: shrivara/kannada-geetha:latest
        name: kannada-geetha
        imagePullPolicy: Always
