kannada-geetha/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: kannada-geetha
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    resource: deployment
